--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -20,18 +20,18 @@ html, body {
 
 @media (min-width: $screen-sm-min) {
   .Layout {
-    width: calc($screen-sm-min - 18px);
+    width: 100%;
   }
 }
 
 @media (min-width: $screen-md-min) {
   .Layout {
-    width: calc($screen-md-min - 22px);
+    width: 100%;
   }
 }
 
 @media (min-width: $screen-lg-min) {
   .Layout {
-    width: calc($screen-lg-min - 30px);
+    width: 100%;
   }
 }
