--- a/components/Navigation/Navigation.scss
+++ b/components/Navigation/Navigation.scss
@@ -7,26 +7,30 @@
 @import '../variables.scss';
 
 .Navigation {
+  background: #222;
+  border-top: 1px solid #bbb;
   display: flex;
   flex-direction: row;
-  margin: 2em 0 5em 0;
+  margin: 0 0 5em 0;
   list-style: none;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .Navigation-item {
-  padding: 0 2em;
+  font-size: 16px;
+  line-height: 40px;
+  padding: 0 1em;
 }
 
 .Navigation-link {
   padding: 0.5em 1em;
-  color: $brand-color;
+  color: $white;
   text-decoration: none;
   text-transform: uppercase;
   cursor: pointer;
 
   &:hover {
     border-bottom: 3px solid $brand-color;
-    color: $text-color;
+    color: $brand-color;
   }
 }
