--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,10 +1,33 @@
 
-@import '../variables.scss';
+@import '../setup.scss';
 
+.header {
+  background-color: #323232;
+  border-top: 1px solid #bbb;
+  display: flex;
+  flex-direction: row;
+  height: 55px;
+  margin: 0 0 5em 0;
+  list-style: none;
+  justify-content: center;
 
-.Branding {
-  @media not all, not all, (-webkit-min-device-pixel-ratio: 1.3), not all, (min-resolution: 1.3dppx) {
+  &__inner {
+    display: flex;
+    flex-direction: row;
+    flex: 1 0 auto;
+    max-width: calc(1020rem / 16);
+  }
+}
+
+.branding {
+  background-image: url('/images/dk-logo-new.png') no-repeat;
+  height: 72px;
+  width: 132px;
+}
+
+@media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+  .branding {
     background-image: url('/images/dk-logo-new@2x.png');
-    backgroun-size: 132px 72px;
+    background-size: 132px 72px
   }
 }
