--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -18,9 +18,17 @@ html, body {
   margin: 0 auto;
 }
 
+.main {
+  margin: 0 auto;
+}
+
 @media (min-width: $screen-sm-min) {
   .Layout {
     width: 100%;
+  }
+
+  .main {
+    max-width: calc(1020rem / 16);
   }
 }
 
@@ -28,10 +36,18 @@ html, body {
   .Layout {
     width: 100%;
   }
+  
+  .main {
+    max-width: calc(1020rem / 16);
+  }
 }
 
 @media (min-width: $screen-lg-min) {
   .Layout {
     width: 100%;
+  }
+  
+  .main {
+    max-width: calc(1020rem / 16);
   }
 }
